# sgl

./: .gitignore  CMakeLists.txt  README.md  build.sh  conanfile.py  run.sh
include/sgl/: algorithms.hh  concepts.hh  core.hh  dimensions.hh  layout.hh  storage.hh  traits.hh
test/: main.cc
